[package]
name = "yapp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-server = "0.7.2"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
